# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("conf_patch_eudev__udev.conf") {
  source = "udev.conf"
  relative_install_dir = "udev/"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-acpi-vendor.hwdb") {
  source = "hwdb.d/20-acpi-vendor.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-bluetooth-vendor-product.hwdb") {
  source = "hwdb.d/20-bluetooth-vendor-product.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-libgphoto2-6.hwdb") {
  source = "hwdb.d/20-libgphoto2-6.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-net-ifname.hwdb") {
  source = "hwdb.d/20-net-ifname.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-OUI.hwdb") {
  source = "hwdb.d/20-OUI.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-pci-classes.hwdb") {
  source = "hwdb.d/20-pci-classes.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-pci-vendor-model.hwdb") {
  source = "hwdb.d/20-pci-vendor-model.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-sane.hwdb") {
  source = "hwdb.d/20-sane.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-sdio-classes.hwdb") {
  source = "hwdb.d/20-sdio-classes.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-sdio-vendor-model.hwdb") {
  source = "hwdb.d/20-sdio-vendor-model.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-usb-classes.hwdb") {
  source = "hwdb.d/20-usb-classes.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-usb-media-players.hwdb") {
  source = "hwdb.d/20-usb-media-players.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-usb-vendor-model.hwdb") {
  source = "hwdb.d/20-usb-vendor-model.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_20-vmbus-class.hwdb") {
  source = "hwdb.d/20-vmbus-class.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_30-pci-intel-gpu.hwdb") {
  source = "hwdb.d/30-pci-intel-gpu.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_60-evdev.hwdb") {
  source = "hwdb.d/60-evdev.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_60-input-id.hwdb") {
  source = "hwdb.d/60-input-id.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_60-keyboard.hwdb") {
  source = "hwdb.d/60-keyboard.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_60-sensor.hwdb") {
  source = "hwdb.d/60-sensor.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_69-libmtp.hwdb") {
  source = "hwdb.d/69-libmtp.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_70-joystick.hwdb") {
  source = "hwdb.d/70-joystick.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_70-mouse.hwdb") {
  source = "hwdb.d/70-mouse.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_70-pointingstick.hwdb") {
  source = "hwdb.d/70-pointingstick.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_hwdb.d_70-touchpad.hwdb") {
  source = "hwdb.d/70-touchpad.hwdb"
  relative_install_dir = "udev/hwdb.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_39-usbmuxd.rules") {
  source = "rules.d/39-usbmuxd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_40-usb-media-players.rules") {
  source = "rules.d/40-usb-media-players.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_40-usb_modeswitch.rules") {
  source = "rules.d/40-usb_modeswitch.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_40-vm-hotadd.rules") {
  source = "rules.d/40-vm-hotadd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_50-apport.rules") {
  source = "rules.d/50-apport.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_50-firmware.rules") {
  source = "rules.d/50-firmware.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_50-udev-default.rules") {
  source = "rules.d/50-udev-default.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_55-dm.rules") {
  source = "rules.d/55-dm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_55-ippusbxd.rules") {
  source = "rules.d/55-ippusbxd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_56-hpmud.rules") {
  source = "rules.d/56-hpmud.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-autosuspend-chromiumos.rules") {
  source = "rules.d/60-autosuspend-chromiumos.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-block.rules") {
  source = "rules.d/60-block.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-cdrom_id.rules") {
  source = "rules.d/60-cdrom_id.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-crda.rules") {
  source = "rules.d/60-crda.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-drm.rules") {
  source = "rules.d/60-drm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-evdev.rules") {
  source = "rules.d/60-evdev.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-fido-id.rules") {
  source = "rules.d/60-fido-id.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-gpsd.rules") {
  source = "rules.d/60-gpsd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-input-id.rules") {
  source = "rules.d/60-input-id.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-inputattach.rules") {
  source = "rules.d/60-inputattach.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-libfprint-2.rules") {
  source = "rules.d/60-libfprint-2.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-libgphoto2-6.rules") {
  source = "rules.d/60-libgphoto2-6.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-libsane.rules") {
  source = "rules.d/60-libsane.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-pcmcia.rules") {
  source = "rules.d/60-pcmcia.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-alsa.rules") {
  source = "rules.d/60-persistent-alsa.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-input.rules") {
  source = "rules.d/60-persistent-input.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-storage-dm.rules") {
  source = "rules.d/60-persistent-storage-dm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-storage-tape.rules") {
  source = "rules.d/60-persistent-storage-tape.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-storage.rules") {
  source = "rules.d/60-persistent-storage.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-persistent-v4l.rules") {
  source = "rules.d/60-persistent-v4l.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-sensor.rules") {
  source = "rules.d/60-sensor.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-serial.rules") {
  source = "rules.d/60-serial.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_60-tpm-udev.rules") {
  source = "rules.d/60-tpm-udev.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_61-autosuspend-manual.rules") {
  source = "rules.d/61-autosuspend-manual.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_61-gdm.rules") {
  source = "rules.d/61-gdm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc(
    "conf_patch_eudev_rules.d_61-gnome-settings-daemon-rfkill.rules") {
  source = "rules.d/61-gnome-settings-daemon-rfkill.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc(
    "conf_patch_eudev_rules.d_61-persistent-storage-android.rules") {
  source = "rules.d/61-persistent-storage-android.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_64-btrfs.rules") {
  source = "rules.d/64-btrfs.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_64-btrfs.rules.in") {
  source = "rules.d/64-btrfs.rules.in"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_64-xorg-xkb.rules") {
  source = "rules.d/64-xorg-xkb.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_65-libwacom.rules") {
  source = "rules.d/65-libwacom.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_66-snapd-autoimport.rules") {
  source = "rules.d/66-snapd-autoimport.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_69-cd-sensors.rules") {
  source = "rules.d/69-cd-sensors.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_69-libmtp.rules") {
  source = "rules.d/69-libmtp.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_69-wacom.rules") {
  source = "rules.d/69-wacom.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-joystick.rules") {
  source = "rules.d/70-joystick.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-mouse.rules") {
  source = "rules.d/70-mouse.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-power-switch.rules") {
  source = "rules.d/70-power-switch.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-printers.rules") {
  source = "rules.d/70-printers.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-spice-vdagentd.rules") {
  source = "rules.d/70-spice-vdagentd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-touchpad.rules") {
  source = "rules.d/70-touchpad.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-u2f.rules") {
  source = "rules.d/70-u2f.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_70-uaccess.rules") {
  source = "rules.d/70-uaccess.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_71-power-switch-proliant.rules") {
  source = "rules.d/71-power-switch-proliant.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_71-seat.rules") {
  source = "rules.d/71-seat.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_71-u-d-c-gpu-detection.rules") {
  source = "rules.d/71-u-d-c-gpu-detection.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_73-seat-late.rules") {
  source = "rules.d/73-seat-late.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_73-special-net-names.rules") {
  source = "rules.d/73-special-net-names.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_75-net-description.rules") {
  source = "rules.d/75-net-description.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_75-probe_mtd.rules") {
  source = "rules.d/75-probe_mtd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-cinterion-port-types.rules") {
  source = "rules.d/77-mm-cinterion-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-dell-port-types.rules") {
  source = "rules.d/77-mm-dell-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-dlink-port-types.rules") {
  source = "rules.d/77-mm-dlink-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-ericsson-mbm.rules") {
  source = "rules.d/77-mm-ericsson-mbm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-fibocom-port-types.rules") {
  source = "rules.d/77-mm-fibocom-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-haier-port-types.rules") {
  source = "rules.d/77-mm-haier-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc(
    "conf_patch_eudev_rules.d_77-mm-huawei-net-port-types.rules") {
  source = "rules.d/77-mm-huawei-net-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-longcheer-port-types.rules") {
  source = "rules.d/77-mm-longcheer-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-mtk-port-types.rules") {
  source = "rules.d/77-mm-mtk-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-nokia-port-types.rules") {
  source = "rules.d/77-mm-nokia-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc(
    "conf_patch_eudev_rules.d_77-mm-pcmcia-device-blacklist.rules") {
  source = "rules.d/77-mm-pcmcia-device-blacklist.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-qdl-device-blacklist.rules") {
  source = "rules.d/77-mm-qdl-device-blacklist.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-quectel-port-types.rules") {
  source = "rules.d/77-mm-quectel-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-sierra.rules") {
  source = "rules.d/77-mm-sierra.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-simtech-port-types.rules") {
  source = "rules.d/77-mm-simtech-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-telit-port-types.rules") {
  source = "rules.d/77-mm-telit-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-tplink-port-types.rules") {
  source = "rules.d/77-mm-tplink-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-ublox-port-types.rules") {
  source = "rules.d/77-mm-ublox-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-usb-device-blacklist.rules") {
  source = "rules.d/77-mm-usb-device-blacklist.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc(
    "conf_patch_eudev_rules.d_77-mm-usb-serial-adapters-greylist.rules") {
  source = "rules.d/77-mm-usb-serial-adapters-greylist.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-x22x-port-types.rules") {
  source = "rules.d/77-mm-x22x-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_77-mm-zte-port-types.rules") {
  source = "rules.d/77-mm-zte-port-types.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_78-graphics-card.rules") {
  source = "rules.d/78-graphics-card.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_78-sound-card.rules") {
  source = "rules.d/78-sound-card.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-debian-compat.rules") {
  source = "rules.d/80-debian-compat.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-drivers.rules") {
  source = "rules.d/80-drivers.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-iio-sensor-proxy.rules") {
  source = "rules.d/80-iio-sensor-proxy.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-libinput-device-groups.rules") {
  source = "rules.d/80-libinput-device-groups.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-mm-candidate.rules") {
  source = "rules.d/80-mm-candidate.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-net-name-slot.rules") {
  source = "rules.d/80-net-name-slot.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-net-setup-link.rules") {
  source = "rules.d/80-net-setup-link.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_80-udisks2.rules") {
  source = "rules.d/80-udisks2.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_84-nm-drivers.rules") {
  source = "rules.d/84-nm-drivers.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_85-brltty.rules") {
  source = "rules.d/85-brltty.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_85-hdparm.rules") {
  source = "rules.d/85-hdparm.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_85-hplj10xx.rules") {
  source = "rules.d/85-hplj10xx.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_85-nm-unmanaged.rules") {
  source = "rules.d/85-nm-unmanaged.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_85-regulatory.rules") {
  source = "rules.d/85-regulatory.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-alsa-restore.rules") {
  source = "rules.d/90-alsa-restore.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-bolt.rules") {
  source = "rules.d/90-bolt.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-console-setup.rules") {
  source = "rules.d/90-console-setup.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-fwupd-devices.rules") {
  source = "rules.d/90-fwupd-devices.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-libgpod.rules") {
  source = "rules.d/90-libgpod.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-libinput-fuzz-override.rules") {
  source = "rules.d/90-libinput-fuzz-override.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-nm-thunderbolt.rules") {
  source = "rules.d/90-nm-thunderbolt.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_90-pulseaudio.rules") {
  source = "rules.d/90-pulseaudio.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-cd-devices.rules") {
  source = "rules.d/95-cd-devices.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-dm-notify.rules") {
  source = "rules.d/95-dm-notify.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-upower-csr.rules") {
  source = "rules.d/95-upower-csr.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-upower-hid.rules") {
  source = "rules.d/95-upower-hid.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-upower-hidpp.rules") {
  source = "rules.d/95-upower-hidpp.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_95-upower-wup.rules") {
  source = "rules.d/95-upower-wup.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_96-e2scrub.rules") {
  source = "rules.d/96-e2scrub.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_97-hid2hci.rules") {
  source = "rules.d/97-hid2hci.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_99-fuse.rules") {
  source = "rules.d/99-fuse.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_99-systemd.rules") {
  source = "rules.d/99-systemd.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_eudev_rules.d_99-virtual_touchpad.rules") {
  source = "rules.d/99-virtual_touchpad.rules"
  relative_install_dir = "udev/rules.d"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

group("prebuild_eudev") {
  deps = [
    ":conf_patch_eudev__udev.conf",
    ":conf_patch_eudev_hwdb.d_20-OUI.hwdb",
    ":conf_patch_eudev_hwdb.d_20-acpi-vendor.hwdb",
    ":conf_patch_eudev_hwdb.d_20-bluetooth-vendor-product.hwdb",
    ":conf_patch_eudev_hwdb.d_20-libgphoto2-6.hwdb",
    ":conf_patch_eudev_hwdb.d_20-net-ifname.hwdb",
    ":conf_patch_eudev_hwdb.d_20-pci-classes.hwdb",
    ":conf_patch_eudev_hwdb.d_20-pci-vendor-model.hwdb",
    ":conf_patch_eudev_hwdb.d_20-sane.hwdb",
    ":conf_patch_eudev_hwdb.d_20-sdio-classes.hwdb",
    ":conf_patch_eudev_hwdb.d_20-sdio-vendor-model.hwdb",
    ":conf_patch_eudev_hwdb.d_20-usb-classes.hwdb",
    ":conf_patch_eudev_hwdb.d_20-usb-media-players.hwdb",
    ":conf_patch_eudev_hwdb.d_20-usb-vendor-model.hwdb",
    ":conf_patch_eudev_hwdb.d_20-vmbus-class.hwdb",
    ":conf_patch_eudev_hwdb.d_30-pci-intel-gpu.hwdb",
    ":conf_patch_eudev_hwdb.d_60-evdev.hwdb",
    ":conf_patch_eudev_hwdb.d_60-input-id.hwdb",
    ":conf_patch_eudev_hwdb.d_60-keyboard.hwdb",
    ":conf_patch_eudev_hwdb.d_60-sensor.hwdb",
    ":conf_patch_eudev_hwdb.d_69-libmtp.hwdb",
    ":conf_patch_eudev_hwdb.d_70-joystick.hwdb",
    ":conf_patch_eudev_hwdb.d_70-mouse.hwdb",
    ":conf_patch_eudev_hwdb.d_70-pointingstick.hwdb",
    ":conf_patch_eudev_hwdb.d_70-touchpad.hwdb",
    ":conf_patch_eudev_rules.d_39-usbmuxd.rules",
    ":conf_patch_eudev_rules.d_40-usb-media-players.rules",
    ":conf_patch_eudev_rules.d_40-usb_modeswitch.rules",
    ":conf_patch_eudev_rules.d_40-vm-hotadd.rules",
    ":conf_patch_eudev_rules.d_50-apport.rules",
    ":conf_patch_eudev_rules.d_50-firmware.rules",
    ":conf_patch_eudev_rules.d_50-udev-default.rules",
    ":conf_patch_eudev_rules.d_55-dm.rules",
    ":conf_patch_eudev_rules.d_55-ippusbxd.rules",
    ":conf_patch_eudev_rules.d_56-hpmud.rules",
    ":conf_patch_eudev_rules.d_60-autosuspend-chromiumos.rules",
    ":conf_patch_eudev_rules.d_60-block.rules",
    ":conf_patch_eudev_rules.d_60-cdrom_id.rules",
    ":conf_patch_eudev_rules.d_60-crda.rules",
    ":conf_patch_eudev_rules.d_60-drm.rules",
    ":conf_patch_eudev_rules.d_60-evdev.rules",
    ":conf_patch_eudev_rules.d_60-fido-id.rules",
    ":conf_patch_eudev_rules.d_60-gpsd.rules",
    ":conf_patch_eudev_rules.d_60-input-id.rules",
    ":conf_patch_eudev_rules.d_60-inputattach.rules",
    ":conf_patch_eudev_rules.d_60-libfprint-2.rules",
    ":conf_patch_eudev_rules.d_60-libgphoto2-6.rules",
    ":conf_patch_eudev_rules.d_60-libsane.rules",
    ":conf_patch_eudev_rules.d_60-pcmcia.rules",
    ":conf_patch_eudev_rules.d_60-persistent-alsa.rules",
    ":conf_patch_eudev_rules.d_60-persistent-input.rules",
    ":conf_patch_eudev_rules.d_60-persistent-storage-dm.rules",
    ":conf_patch_eudev_rules.d_60-persistent-storage-tape.rules",
    ":conf_patch_eudev_rules.d_60-persistent-storage.rules",
    ":conf_patch_eudev_rules.d_60-persistent-v4l.rules",
    ":conf_patch_eudev_rules.d_60-sensor.rules",
    ":conf_patch_eudev_rules.d_60-serial.rules",
    ":conf_patch_eudev_rules.d_60-tpm-udev.rules",
    ":conf_patch_eudev_rules.d_61-autosuspend-manual.rules",
    ":conf_patch_eudev_rules.d_61-gdm.rules",
    ":conf_patch_eudev_rules.d_61-gnome-settings-daemon-rfkill.rules",
    ":conf_patch_eudev_rules.d_61-persistent-storage-android.rules",
    ":conf_patch_eudev_rules.d_64-btrfs.rules",
    ":conf_patch_eudev_rules.d_64-btrfs.rules.in",
    ":conf_patch_eudev_rules.d_64-xorg-xkb.rules",
    ":conf_patch_eudev_rules.d_65-libwacom.rules",
    ":conf_patch_eudev_rules.d_66-snapd-autoimport.rules",
    ":conf_patch_eudev_rules.d_69-cd-sensors.rules",
    ":conf_patch_eudev_rules.d_69-libmtp.rules",
    ":conf_patch_eudev_rules.d_69-wacom.rules",
    ":conf_patch_eudev_rules.d_70-joystick.rules",
    ":conf_patch_eudev_rules.d_70-mouse.rules",
    ":conf_patch_eudev_rules.d_70-power-switch.rules",
    ":conf_patch_eudev_rules.d_70-printers.rules",
    ":conf_patch_eudev_rules.d_70-spice-vdagentd.rules",
    ":conf_patch_eudev_rules.d_70-touchpad.rules",
    ":conf_patch_eudev_rules.d_70-u2f.rules",
    ":conf_patch_eudev_rules.d_70-uaccess.rules",
    ":conf_patch_eudev_rules.d_71-power-switch-proliant.rules",
    ":conf_patch_eudev_rules.d_71-seat.rules",
    ":conf_patch_eudev_rules.d_71-u-d-c-gpu-detection.rules",
    ":conf_patch_eudev_rules.d_73-seat-late.rules",
    ":conf_patch_eudev_rules.d_73-special-net-names.rules",
    ":conf_patch_eudev_rules.d_75-net-description.rules",
    ":conf_patch_eudev_rules.d_75-probe_mtd.rules",
    ":conf_patch_eudev_rules.d_77-mm-cinterion-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-dell-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-dlink-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-ericsson-mbm.rules",
    ":conf_patch_eudev_rules.d_77-mm-fibocom-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-haier-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-huawei-net-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-longcheer-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-mtk-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-nokia-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-pcmcia-device-blacklist.rules",
    ":conf_patch_eudev_rules.d_77-mm-qdl-device-blacklist.rules",
    ":conf_patch_eudev_rules.d_77-mm-quectel-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-sierra.rules",
    ":conf_patch_eudev_rules.d_77-mm-simtech-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-telit-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-tplink-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-ublox-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-usb-device-blacklist.rules",
    ":conf_patch_eudev_rules.d_77-mm-usb-serial-adapters-greylist.rules",
    ":conf_patch_eudev_rules.d_77-mm-x22x-port-types.rules",
    ":conf_patch_eudev_rules.d_77-mm-zte-port-types.rules",
    ":conf_patch_eudev_rules.d_78-graphics-card.rules",
    ":conf_patch_eudev_rules.d_78-sound-card.rules",
    ":conf_patch_eudev_rules.d_80-debian-compat.rules",
    ":conf_patch_eudev_rules.d_80-drivers.rules",
    ":conf_patch_eudev_rules.d_80-iio-sensor-proxy.rules",
    ":conf_patch_eudev_rules.d_80-libinput-device-groups.rules",
    ":conf_patch_eudev_rules.d_80-mm-candidate.rules",
    ":conf_patch_eudev_rules.d_80-net-name-slot.rules",
    ":conf_patch_eudev_rules.d_80-net-setup-link.rules",
    ":conf_patch_eudev_rules.d_80-udisks2.rules",
    ":conf_patch_eudev_rules.d_84-nm-drivers.rules",
    ":conf_patch_eudev_rules.d_85-brltty.rules",
    ":conf_patch_eudev_rules.d_85-hdparm.rules",
    ":conf_patch_eudev_rules.d_85-hplj10xx.rules",
    ":conf_patch_eudev_rules.d_85-nm-unmanaged.rules",
    ":conf_patch_eudev_rules.d_85-regulatory.rules",
    ":conf_patch_eudev_rules.d_90-alsa-restore.rules",
    ":conf_patch_eudev_rules.d_90-bolt.rules",
    ":conf_patch_eudev_rules.d_90-console-setup.rules",
    ":conf_patch_eudev_rules.d_90-fwupd-devices.rules",
    ":conf_patch_eudev_rules.d_90-libgpod.rules",
    ":conf_patch_eudev_rules.d_90-libinput-fuzz-override.rules",
    ":conf_patch_eudev_rules.d_90-nm-thunderbolt.rules",
    ":conf_patch_eudev_rules.d_90-pulseaudio.rules",
    ":conf_patch_eudev_rules.d_95-cd-devices.rules",
    ":conf_patch_eudev_rules.d_95-dm-notify.rules",
    ":conf_patch_eudev_rules.d_95-upower-csr.rules",
    ":conf_patch_eudev_rules.d_95-upower-hid.rules",
    ":conf_patch_eudev_rules.d_95-upower-hidpp.rules",
    ":conf_patch_eudev_rules.d_95-upower-wup.rules",
    ":conf_patch_eudev_rules.d_96-e2scrub.rules",
    ":conf_patch_eudev_rules.d_97-hid2hci.rules",
    ":conf_patch_eudev_rules.d_99-fuse.rules",
    ":conf_patch_eudev_rules.d_99-systemd.rules",
    ":conf_patch_eudev_rules.d_99-virtual_touchpad.rules",
  ]
}
